rest: Revert to pre Java 10 API